# coursework_7

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
main/: models.py  paginations.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
